--- a/ML/model/CV.ipynb
+++ b/ML/model/CV.ipynb
@@ -89,9 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -115,17 +115,6 @@
       "[600]\ttrain-rmse:0.266131\ttest-rmse:0.316368\n",
       "[650]\ttrain-rmse:0.263164\ttest-rmse:0.316343\n",
       "620\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'booster'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-0456058d7153>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0mxgb_params\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'n_estimators'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcv_output\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXGBRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mxgb_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;31m# model = XGBRegressor(seed=5, learning_rate=.05, subsample=.7, max_depth=5, #min_child_weight=3,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'booster'"
      ]
     }
    ],
@@ -176,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -292,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -337,7 +326,11 @@
     "#'min_samples_leaf': 2}train_rmse = 0.241249700631 , val_rmse = 0.324802592639\n",
     "\n",
     "#jun24 data log1p ET et_params = {'n_jobs': 16,'n_estimators': 100,'max_features': 0.5,'max_depth': 12,\n",
-    "#'min_samples_leaf': 2,'random_state': 10} train_rmse = 0.247191933346 , val_rmse = 0.324373969057"
+    "#'min_samples_leaf': 2,'random_state': 10} train_rmse = 0.247191933346 , val_rmse = 0.324373969057\n",
+    "\n",
+    "#jun25 data log1p xgb_params = {'learning_rate': 0.05,'max_depth': 4,'subsample': 0.95,'reg_alpha': 0,\n",
+    "#'min_child_weight':4,'colsample_bytree': 0.95,'gamma':.4,'objective': 'reg:linear',\n",
+    "#'seed': 5, 'n_estimators':620 train_rmse = 0.265971694683 , val_rmse = 0.319114085918"
    ]
   },
   {
