--- a/ML/model/FurtherModels.ipynb
+++ b/ML/model/FurtherModels.ipynb
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "X_train, X_test, y_train = readData()\n",
+    "X_train, X_test, y_train = readData(isLog1p=True)\n",
     "#X_train, X_test = data_preprocess(X_train, X_test)"
    ]
   },
@@ -241,9 +241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -259,12 +259,12 @@
     "model = RandomForestRegressor(**rf_params)\n",
     "train, test = data_preprocess(X_train, X_test)\n",
     "model.fit(train, y_train)\n",
-    "y_predict = model.predict(dtest)"
+    "y_predict = model.predict(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -275,14 +275,16 @@
     "y_predict = np.exp(y_predict)-1\n",
     "#y_predict = np.round(y_predict)#np.round(y_predict * 0.99)\n",
     "output = pd.DataFrame({'id': pd.read_csv('../../input/test.csv')['id'], 'price_doc': y_predict})\n",
-    "output.to_csv('../result/jun25_5_ext.csv', index=False)"
+    "output.to_csv('../result/jun26_2_rf.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
