--- a/ML/model/Stacking.ipynb
+++ b/ML/model/Stacking.ipynb
@@ -295,10 +295,90 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "base_models = [\n",
+    "        RandomForestRegressor(max_depth=6, n_jobs=-1, random_state=123,\n",
+    "            n_estimators=500, max_features=.95\n",
+    "        ), #0.34513\n",
+    "#         RandomForestRegressor(max_depth=5, n_jobs=-1, random_state=123,\n",
+    "#             n_estimators=500, max_features=.95\n",
+    "#         ), #0.34513\n",
+    "        RandomForestRegressor(max_depth=12, min_samples_leaf=2, n_jobs=-1, random_state=16,\n",
+    "            n_estimators=100, max_features=.2\n",
+    "        ), #0.34513\n",
+    "#         ExtraTreesRegressor(\n",
+    "#             n_jobs=-1, random_state=0, \n",
+    "#             n_estimators=500, max_features=15\n",
+    "#         ),\n",
+    "        ExtraTreesRegressor(min_samples_leaf=2, max_depth=12,\n",
+    "            n_jobs=-1, random_state=10, \n",
+    "          n_estimators=100, max_features=.5\n",
+    "        ),\n",
+    "        ExtraTreesRegressor(\n",
+    "            n_jobs=-1, random_state=0, \n",
+    "          n_estimators=500, max_features=20\n",
+    "        ),\n",
+    "        GradientBoostingRegressor(learning_rate=0.02, n_estimators=500, min_samples_leaf=70, \n",
+    "            min_samples_split=200, max_features='sqrt',max_depth=6,subsample=0.85,random_state=10\n",
+    "            ), #LB 0.32465\n",
+    "        GradientBoostingRegressor(\n",
+    "            random_state=0, \n",
+    "            n_estimators=500, max_features=15, max_depth=6,\n",
+    "            learning_rate=0.05, subsample=0.8\n",
+    "        ),\n",
+    "#         XGBRegressor(seed=5, learning_rate=.02, subsample=.95, max_depth=6, min_child_weight=3, \n",
+    "#             n_estimators=500, colsample_bytree=0.95\n",
+    "#         ), #0.31625 \n",
+    "        XGBRegressor(seed=5, learning_rate=.05, subsample=.95, max_depth=4, min_child_weight=4, \n",
+    "            n_estimators=620, colsample_bytree=0.95, gamma=.4,\n",
+    "        ), #0.31625 \n",
+    "        XGBRegressor(seed=5, learning_rate=.05, subsample=.7, max_depth=5, #min_child_weight=3, \n",
+    "            n_estimators=309, colsample_bytree=0.7\n",
+    "        ), #0.31625\n",
+    "        LassoCV(alphas = [1, 0.1, 0.001, 0.0005]),\n",
+    "        KNeighborsRegressor(n_neighbors = 5),\n",
+    "        KNeighborsRegressor(n_neighbors = 10),\n",
+    "        KNeighborsRegressor(n_neighbors = 15),\n",
+    "        KNeighborsRegressor(n_neighbors = 25),\n",
+    "        LassoLarsCV(),\n",
+    "        ElasticNet(),\n",
+    "        SVR()\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "rf_params1 = {'max_depth':6, 'n_jobs':-1, 'n_estimators':500, 'max_features':.95}\n",
+    "\n",
+    "rf_params2 = {'max_depth':12, 'min_samples_leaf':2, 'n_jobs':-1, 'n_estimators':100, 'max_features':.2}\n",
+    "\n",
+    "et_params1 = {'min_samples_leaf':2, 'max_depth':12, 'n_jobs':-1, 'n_estimators':100, 'max_features':.5}\n",
+    "\n",
+    "et_params2 = {'min_samples_leaf':2, 'max_depth':12, 'n_jobs':-1, 'n_estimators':100, 'max_features':.5}\n",
+    "\n",
+    "gb_params1 = {'learning_rate':0.02, 'n_estimators':500, 'min_samples_leaf':70, 'min_samples_split':200, \n",
+    "              'max_features':'sqrt', 'max_depth':6, 'subsample':0.85}\n",
+    "\n",
+    "gb_params2 = {'n_estimators':500, 'max_features':15, 'max_depth':6, 'learning_rate':0.05, 'subsample':0.8}\n",
+    "\n",
+    "\n",
+    "\n",
+    "SEED = 0\n",
+    "\n",
+    "xg = XgbWrapper(seed=SEED, params=xgb_params)\n",
+    "et = SklearnWrapper(clf=ExtraTreesRegressor, seed=SEED, params=et_params)"
+   ]
   }
  ],
  "metadata": {
