--- a/ML/model/Stacking.ipynb
+++ b/ML/model/Stacking.ipynb
@@ -13,9 +13,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ubuntu/anaconda2/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
-      "/home/ubuntu/anaconda2/lib/python2.7/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
       "  DeprecationWarning)\n"
      ]
     }
@@ -353,12 +353,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "sys.path.append(module_path)\n",
+    "\n",
+    "import pandas as pd\n",
+    "# remove warnings\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.ensemble import ExtraTreesRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.linear_model import Ridge, Lasso\n",
+    "\n",
+    "from model_stack.model_wrapper import XgbWrapper, SklearnWrapper, GridCVWrapper\n",
+    "from model_stack.model_stack import TwoLevelModelStacking\n",
+    "\n",
+    "# my own module\n",
+    "from features import data_utils\n",
+    "from conf.configure import Configure\n",
+    "\n",
     "rf_params1 = {'max_depth':6, 'n_jobs':-1, 'n_estimators':500, 'max_features':.95}\n",
     "\n",
     "rf_params2 = {'max_depth':12, 'min_samples_leaf':2, 'n_jobs':-1, 'n_estimators':100, 'max_features':.2}\n",
@@ -372,19 +397,90 @@
     "\n",
     "gb_params2 = {'n_estimators':500, 'max_features':15, 'max_depth':6, 'learning_rate':0.05, 'subsample':0.8}\n",
     "\n",
+    "xgb_params1 = {'learning_rate':.05, 'subsample':.95, 'max_depth':4, 'min_child_weight':4, 'n_estimators':620, \n",
+    "              'colsample_bytree':0.95, 'gamma':.4}\n",
     "\n",
+    "xgb_params2 = {'learning_rate':.05, 'subsample':.7, 'max_depth':5, 'n_estimators':309, 'colsample_bytree':0.7}\n",
+    "\n",
+    "lcv_params = {'alphas' : [1, 0.1, 0.001, 0.0005]}\n",
+    "\n",
+    "rd_params = {'alpha': 10}\n",
+    "\n",
+    "ls_params = {'alpha': 0.005}\n",
+    "\n",
+    "eln_params = {}\n",
+    "\n",
+    "SEED = 0\n",
+    "\n",
+    "level_1_models = [XgbWrapper(seed=SEED, params=xgb_params1), XgbWrapper(seed=SEED, params=xgb_params2)]\n",
+    "\n",
+    "params_list = [rf_params1, rf_params2, et_params1, et_params2, gb_params1, gb_params2, \n",
+    "               lcv_params, rd_params, ls_params, eln_params]\n",
+    "\n",
+    "func_list = [RandomForestRegressor, RandomForestRegressor, ExtraTreesRegressor, ExtraTreesRegressor, \n",
+    "             GradientBoostingRegressor, GradientBoostingRegressor, LassoCV, Ridge, Lasso, ElasticNet]\n",
+    "level_1_models = level_1_models + \\\n",
+    "    list(map(lambda x: SklearnWrapper(clf=x[1], seed=SEED, params=x[0]), zip(params_list, func_list)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "et_params = {\n",
+    "    'n_jobs': 16,\n",
+    "    'n_estimators': 100,\n",
+    "    'max_features': 0.5,\n",
+    "    'max_depth': 12,\n",
+    "    'min_samples_leaf': 2,\n",
+    "}\n",
+    "\n",
+    "rf_params = {\n",
+    "    'n_jobs': 16,\n",
+    "    'n_estimators': 100,\n",
+    "    'max_features': 0.2,\n",
+    "    'max_depth': 12,\n",
+    "    'min_samples_leaf': 2,\n",
+    "}\n",
+    "\n",
+    "xgb_params = {\n",
+    "    'eta': 0.05,\n",
+    "    'max_depth': 5,\n",
+    "    'subsample': 0.7,\n",
+    "    'colsample_bytree': 0.7,\n",
+    "    'objective': 'reg:linear',\n",
+    "    'eval_metric': 'rmse',\n",
+    "    'silent': 1\n",
+    "}\n",
+    "\n",
+    "rd_params = {\n",
+    "    'alpha': 10\n",
+    "}\n",
+    "\n",
+    "ls_params = {\n",
+    "    'alpha': 0.005\n",
+    "}\n",
     "\n",
     "SEED = 0\n",
     "\n",
     "xg = XgbWrapper(seed=SEED, params=xgb_params)\n",
-    "et = SklearnWrapper(clf=ExtraTreesRegressor, seed=SEED, params=et_params)"
+    "et = SklearnWrapper(clf=ExtraTreesRegressor, seed=SEED, params=et_params)\n",
+    "rf = SklearnWrapper(clf=RandomForestRegressor, seed=SEED, params=rf_params)\n",
+    "rd = SklearnWrapper(clf=Ridge, seed=SEED, params=rd_params)\n",
+    "ls = SklearnWrapper(clf=Lasso, seed=SEED, params=ls_params)\n",
+    "\n",
+    "level_1_models = [xg, et, rf, rd, ls]\n"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -398,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
