--- a/ML/model/CV.ipynb
+++ b/ML/model/CV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -33,6 +33,7 @@
     "from sklearn.cross_validation import train_test_split\n",
     "from xgboost import XGBRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor, ExtraTreesRegressor, GradientBoostingRegressor\n",
+    "from sklearn.linear_model import Ridge, Lasso\n",
     "\n",
     "from readData import readData, data_preprocess\n",
     "\n",
@@ -281,7 +282,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "X_train, X_test = data_preprocess(X_train, X_test)\n",
+    "rd_params = {'alpha': .5}\n",
+    "model = Ridge(**rd_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ls_params = {\n",
+    "    'alpha': 0.005\n",
+    "}\n",
+    "model = Lasso(**ls_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -292,7 +320,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_rmse = 0.265971694683 , val_rmse = 0.319114085918\n"
+      "train_rmse = 0.334846893112 , val_rmse = 0.339948393494\n"
      ]
     }
    ],
@@ -330,7 +358,12 @@
     "\n",
     "#jun25 data log1p xgb_params = {'learning_rate': 0.05,'max_depth': 4,'subsample': 0.95,'reg_alpha': 0,\n",
     "#'min_child_weight':4,'colsample_bytree': 0.95,'gamma':.4,'objective': 'reg:linear',\n",
-    "#'seed': 5, 'n_estimators':620 train_rmse = 0.265971694683 , val_rmse = 0.319114085918"
+    "#'seed': 5, 'n_estimators':620 train_rmse = 0.265971694683 , val_rmse = 0.319114085918\n",
+    "\n",
+    "#jun25 data log1p, rd alpha=10, train_rmse = 0.321207016244 , val_rmse = 0.33232610611\n",
+    "#jun25 data log1p, rd alpha=1, 0.320498636946 , val_rmse = 0.332092993125\n",
+    "\n",
+    "#jun25 data log1p, ls alpha=.005, train_rmse = 0.334846893112 , val_rmse = 0.339948393494"
    ]
   },
   {
