--- a/ML/model/FurtherModels.ipynb
+++ b/ML/model/FurtherModels.ipynb
@@ -264,7 +264,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rd_params = {'alpha': 1}\n",
+    "model = Ridge(**rd_params)\n",
+    "train, test = data_preprocess(X_train, X_test)\n",
+    "model.fit(train, y_train)\n",
+    "y_predict = model.predict(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -275,7 +290,7 @@
     "y_predict = np.exp(y_predict)-1\n",
     "#y_predict = np.round(y_predict)#np.round(y_predict * 0.99)\n",
     "output = pd.DataFrame({'id': pd.read_csv('../../input/test.csv')['id'], 'price_doc': y_predict})\n",
-    "output.to_csv('../result/jun26_2_rf.csv', index=False)"
+    "output.to_csv('../result/jun26_5_rd.csv', index=False)"
    ]
   },
   {
